force-app/main/default/objects/ACV_Form__c/ACV_Form__c.object-meta.xml
<CustomObject>
    <label>ACV Form</label>
    <nameField>
        <label>ACV Form Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ACV Forms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>