force-app/main/default/objects/ACV_Form__c/fields/ACV_Form_Name__c.field-meta.xml
<CustomField>
    <fullName>ACV_Form_Name__c</fullName>
    <label>ACV Form Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>