force-app/main/default/objects/ACV_Form__c/fields/Approved_ACV__c.field-meta.xml
<CustomField>
    <fullName>Approved_ACV__c</fullName>
    <description>Managers Approved ACV</description>
    <label>Approved ACV</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>