force-app/main/default/objects/ACV_Form__c/fields/auges_Screen_Comments__c.field-meta.xml
<CustomField>
    <fullName>auges_Screen_Comments__c</fullName>
    <label>Gauges/Screen Estimated Repair Cost</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>