force-app/main/default/objects/ACV_Form__c/fields/Average_Online_Selling_Price__c.field-meta.xml
<CustomField>
    <fullName>Average_Online_Selling_Price__c</fullName>
    <formula>(High_Comp_1_Amount__c + High_Comp_2_Amount__c + High_Comp_3_Amount__c + Low_Comp_1_Amount__c + Low_Comp_2_Amount__c+Low_Comp_3_Amount__c) /6</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Average Online Selling Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>