force-app/main/default/objects/ACV_Form__c/fields/Ballast_Pumps__c.field-meta.xml
<CustomField>
    <fullName>Ballast_Pumps__c</fullName>
    <label>Ballast Pumps</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ACV_Condition</valueSetName>
    </valueSet>
</CustomField>