force-app/main/default/objects/ACV_Form__c/fields/Ballast_Pumps_Comments__c.field-meta.xml
<CustomField>
    <fullName>Ballast_Pumps_Comments__c</fullName>
    <label>Ballast Pumps Comments</label>
    <type>TextArea</type>
</CustomField>