force-app/main/default/objects/ACV_Form__c/fields/Ballast_Pumps_Estimated_Repair_Cost__c.field-meta.xml
<CustomField>
    <fullName>Ballast_Pumps_Estimated_Repair_Cost__c</fullName>
    <label>Ballast Pumps Estimated Repair Cost</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>