force-app/main/default/objects/ACV_Form__c/fields/Bilge_Pump__c.field-meta.xml
<CustomField>
    <fullName>Bilge_Pump__c</fullName>
    <label>Bilge Pump</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ACV_Condition</valueSetName>
    </valueSet>
</CustomField>