force-app/main/default/objects/ACV_Form__c/fields/Bilge_Pump_Comments__c.field-meta.xml
<CustomField>
    <fullName>Bilge_Pump_Comments__c</fullName>
    <label>Bilge Pump Comments</label>
    <type>TextArea</type>
</CustomField>