force-app/main/default/objects/ACV_Form__c/fields/Bilge_Pump_Estimated_Repair_Cost__c.field-meta.xml
<CustomField>
    <fullName>Bilge_Pump_Estimated_Repair_Cost__c</fullName>
    <label>Bilge Pump Estimated Repair Cost</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>