force-app/main/default/objects/ACV_Form__c/fields/Blower_Comments__c.field-meta.xml
<CustomField>
    <fullName>Blower_Comments__c</fullName>
    <label>Blower Comments</label>
    <type>TextArea</type>
</CustomField>