force-app/main/default/objects/ACV_Form__c/fields/Boat_Detail_Cost__c.field-meta.xml
<CustomField>
    <fullName>Boat_Detail_Cost__c</fullName>
    <label>Boat Detail Cost</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>