force-app/main/default/objects/ACV_Form__c/fields/Boat_HIN__c.field-meta.xml
<CustomField>
    <fullName>Boat_HIN__c</fullName>
    <formula>Contact_Name__r.Trade_In_Boat_HIN__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Boat HIN</label>
    <type>Text</type>
</CustomField>