force-app/main/default/objects/ACV_Form__c/fields/Boat_Hrs__c.field-meta.xml
<CustomField>
    <fullName>Boat_Hrs__c</fullName>
    <formula>Contact_Name__r.Trade_Boat_Hrs__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Boat Hrs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>