force-app/main/default/objects/ACV_Form__c/fields/Boat_Make__c.field-meta.xml
<CustomField>
    <fullName>Boat_Make__c</fullName>
    <formula>Contact_Name__r.Trade_Make__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Boat Make</label>
    <type>Text</type>
</CustomField>