force-app/main/default/objects/ACV_Form__c/fields/Boat_Model__c.field-meta.xml
<CustomField>
    <fullName>Boat_Model__c</fullName>
    <formula>Contact_Name__r.Trade_Model__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Boat Model</label>
    <type>Text</type>
</CustomField>