force-app/main/default/objects/ACV_Form__c/fields/Boat_Pay_Off__c.field-meta.xml
<CustomField>
    <fullName>Boat_Pay_Off__c</fullName>
    <formula>Contact_Name__r.Trade_Payoff__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Boat Pay-Off</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>