force-app/main/default/objects/ACV_Form__c/fields/Boat_Type__c.field-meta.xml
<CustomField>
    <fullName>Boat_Type__c</fullName>
    <description>I/o or Inboard</description>
    <label>Boat Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Boat_Type</valueSetName>
    </valueSet>
</CustomField>