force-app/main/default/objects/ACV_Form__c/fields/Boat_Value_Comp__c.field-meta.xml
<CustomField>
    <fullName>Boat_Value_Comp__c</fullName>
    <formula>Recommended_90_Day_Online_Sell_price__c  - Total_Estimated_Repair_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Boat Value Comp</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>