force-app/main/default/objects/ACV_Form__c/fields/Boat_Year__c.field-meta.xml
<CustomField>
    <fullName>Boat_Year__c</fullName>
    <formula>Contact_Name__r.Trade_Model_Year__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Boat Year</label>
    <type>Text</type>
</CustomField>