force-app/main/default/objects/ACV_Form__c/fields/BoatHIN__c.field-meta.xml
<CustomField>
    <fullName>BoatHIN__c</fullName>
    <label>Boat HIN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>