force-app/main/default/objects/ACV_Form__c/fields/BoatHrs__c.field-meta.xml
<CustomField>
    <fullName>BoatHrs__c</fullName>
    <label>Boat Hrs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>