force-app/main/default/objects/ACV_Form__c/fields/BoatMake__c.field-meta.xml
<CustomField>
    <fullName>BoatMake__c</fullName>
    <label>Boat Make</label>
    <length>255</length>
    <type>Text</type>
</CustomField>