force-app/main/default/objects/ACV_Form__c/fields/BoatModel__c.field-meta.xml
<CustomField>
    <fullName>BoatModel__c</fullName>
    <label>Boat Model</label>
    <length>255</length>
    <type>Text</type>
</CustomField>