force-app/main/default/objects/ACV_Form__c/fields/BoatPayOff__c.field-meta.xml
<CustomField>
    <fullName>BoatPayOff__c</fullName>
    <label>Boat Pay-Off</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>