force-app/main/default/objects/ACV_Form__c/fields/BoatYear__c.field-meta.xml
<CustomField>
    <fullName>BoatYear__c</fullName>
    <label>Boat Year</label>
    <length>255</length>
    <type>Text</type>
</CustomField>