force-app/main/default/objects/ACV_Form__c/fields/Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Name__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Contact name this is used to look up customer names</description>
    <label>Contact Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>ACV Forms</relationshipLabel>
    <relationshipName>ACV_Forms</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>