force-app/main/default/objects/ACV_Form__c/fields/Cover_Comments__c.field-meta.xml
<CustomField>
    <fullName>Cover_Comments__c</fullName>
    <label>Cover Comments</label>
    <type>TextArea</type>
</CustomField>