force-app/main/default/objects/ACV_Form__c/fields/Dash_Comments__c.field-meta.xml
<CustomField>
    <fullName>Dash_Comments__c</fullName>
    <label>Dash Comments</label>
    <type>TextArea</type>
</CustomField>