force-app/main/default/objects/ACV_Form__c/fields/Dash_Condition__c.field-meta.xml
<CustomField>
    <fullName>Dash_Condition__c</fullName>
    <label>Dash Condition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ACV_Condition</valueSetName>
    </valueSet>
</CustomField>