force-app/main/default/objects/ACV_Form__c/fields/Decals_and_Striping__c.field-meta.xml
<CustomField>
    <fullName>Decals_and_Striping__c</fullName>
    <label>Decals and Striping</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ACV_Condition</valueSetName>
    </valueSet>
</CustomField>