force-app/main/default/objects/ACV_Form__c/fields/Decals_and_Striping_Comments__c.field-meta.xml
<CustomField>
    <fullName>Decals_and_Striping_Comments__c</fullName>
    <label>Decals and Striping Comments</label>
    <type>TextArea</type>
</CustomField>