force-app/main/default/objects/ACV_Form__c/fields/Decals_and_Striping_Estimated_Repair_Cos__c.field-meta.xml
<CustomField>
    <fullName>Decals_and_Striping_Estimated_Repair_Cos__c</fullName>
    <label>Decals and Striping Estimated Repair Cos</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>