force-app/main/default/objects/ACV_Form__c/fields/Desire_Boat_Margin__c.field-meta.xml
<CustomField>
    <fullName>Desire_Boat_Margin__c</fullName>
    <label>Desire Boat Margin</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>