force-app/main/default/objects/ACV_Form__c/fields/Desire_Nada_Boat_Margin__c.field-meta.xml
<CustomField>
    <fullName>Desire_Nada_Boat_Margin__c</fullName>
    <label>Desire Nada Boat Margin</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>