force-app/main/default/objects/ACV_Form__c/fields/Engine_Belts__c.field-meta.xml
<CustomField>
    <fullName>Engine_Belts__c</fullName>
    <label>Engine Belts</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ACV_Condition</valueSetName>
    </valueSet>
</CustomField>