force-app/main/default/objects/ACV_Form__c/fields/Engine_Belts_Comments__c.field-meta.xml
<CustomField>
    <fullName>Engine_Belts_Comments__c</fullName>
    <label>Engine Belts Comments</label>
    <type>TextArea</type>
</CustomField>