force-app/main/default/objects/ACV_Form__c/fields/Engine_Model__c.field-meta.xml
<CustomField>
    <fullName>Engine_Model__c</fullName>
    <formula>Contact_Name__r.Account.Engine_Model__c</formula>
    <label>Engine Model</label>
    <type>Text</type>
</CustomField>