force-app/main/default/objects/ACV_Form__c/fields/Engine_Oil__c.field-meta.xml
<CustomField>
    <fullName>Engine_Oil__c</fullName>
    <label>Engine Oil</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ACV_Condition</valueSetName>
    </valueSet>
</CustomField>