force-app/main/default/objects/ACV_Form__c/fields/Engine_Oil_Comments__c.field-meta.xml
<CustomField>
    <fullName>Engine_Oil_Comments__c</fullName>
    <label>Engine Oil Comments</label>
    <type>TextArea</type>
</CustomField>