force-app/main/default/objects/ACV_Form__c/fields/Engine_Running_Comments__c.field-meta.xml
<CustomField>
    <fullName>Engine_Running_Comments__c</fullName>
    <label>Engine Running Comments</label>
    <type>TextArea</type>
</CustomField>