force-app/main/default/objects/ACV_Form__c/fields/Engine_Running_Condition__c.field-meta.xml
<CustomField>
    <fullName>Engine_Running_Condition__c</fullName>
    <label>Engine Running Condition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ACV_Condition</valueSetName>
    </valueSet>
</CustomField>