force-app/main/default/objects/ACV_Form__c/fields/Engine_Service__c.field-meta.xml
<CustomField>
    <fullName>Engine_Service__c</fullName>
    <label>Engine Service</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ACV_Condition</valueSetName>
    </valueSet>
</CustomField>