force-app/main/default/objects/ACV_Form__c/fields/Engine_Service_Comments__c.field-meta.xml
<CustomField>
    <fullName>Engine_Service_Comments__c</fullName>
    <label>Engine Service Comments</label>
    <type>TextArea</type>
</CustomField>