force-app/main/default/objects/ACV_Form__c/fields/Engine_SN__c.field-meta.xml
<CustomField>
    <fullName>Engine_SN__c</fullName>
    <formula>Contact_Name__r.Trade_Boat_Engine_SN__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Engine SN</label>
    <type>Text</type>
</CustomField>