force-app/main/default/objects/ACV_Form__c/fields/EngineModel__c.field-meta.xml
<CustomField>
    <fullName>EngineModel__c</fullName>
    <label>Engine Model</label>
    <length>255</length>
    <type>Text</type>
</CustomField>