force-app/main/default/objects/ACV_Form__c/fields/EngineSN__c.field-meta.xml
<CustomField>
    <fullName>EngineSN__c</fullName>
    <label>Engine SN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>