force-app/main/default/objects/ACV_Form__c/fields/Gauges_Screen__c.field-meta.xml
<CustomField>
    <fullName>Gauges_Screen__c</fullName>
    <label>Gauges/Screen</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ACV_Condition</valueSetName>
    </valueSet>
</CustomField>