force-app/main/default/objects/ACV_Form__c/fields/Gauges_Screen_Comments__c.field-meta.xml
<CustomField>
    <fullName>Gauges_Screen_Comments__c</fullName>
    <label>Gauges/Screen Comments</label>
    <type>TextArea</type>
</CustomField>