force-app/main/default/objects/ACV_Form__c/fields/High_Comp_3_Amount__c.field-meta.xml
<CustomField>
    <fullName>High_Comp_3_Amount__c</fullName>
    <label>High Comp 3 Amount</label>
    <precision>10</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>