force-app/main/default/objects/ACV_Form__c/fields/Horn_Comments__c.field-meta.xml
<CustomField>
    <fullName>Horn_Comments__c</fullName>
    <label>Horn Comments</label>
    <type>TextArea</type>
</CustomField>