force-app/main/default/objects/ACV_Form__c/fields/Hull_and_Deck__c.field-meta.xml
<CustomField>
    <fullName>Hull_and_Deck__c</fullName>
    <label>Hull and Deck</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ACV_Condition</valueSetName>
    </valueSet>
</CustomField>