force-app/main/default/objects/ACV_Form__c/fields/Hull_and_Deck_Comments__c.field-meta.xml
<CustomField>
    <fullName>Hull_and_Deck_Comments__c</fullName>
    <label>Hull and Deck Comments</label>
    <type>TextArea</type>
</CustomField>