force-app/main/default/objects/ACV_Form__c/fields/Hull_and_Deck_Estimated_Repair_Amount__c.field-meta.xml
<CustomField>
    <fullName>Hull_and_Deck_Estimated_Repair_Amount__c</fullName>
    <label>Hull and Deck Estimated Repair Amount</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>