force-app/main/default/objects/ACV_Form__c/fields/Interest_of_Inventory__c.field-meta.xml
<CustomField>
    <fullName>Interest_of_Inventory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Interest of Inventory</label>
    <referenceTo>Inventory__c</referenceTo>
    <relationshipLabel>ACV Forms</relationshipLabel>
    <relationshipName>ACV_Forms</relationshipName>
    <type>Lookup</type>
</CustomField>