force-app/main/default/objects/ACV_Form__c/fields/Lien_Bank__c.field-meta.xml
<CustomField>
    <fullName>Lien_Bank__c</fullName>
    <formula>Contact_Name__r.Trade_Boat_Lien_Bank__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lien Bank</label>
    <type>Text</type>
</CustomField>