force-app/main/default/objects/ACV_Form__c/fields/LienBank__c.field-meta.xml
<CustomField>
    <fullName>LienBank__c</fullName>
    <label>Lien Bank</label>
    <length>255</length>
    <type>Text</type>
</CustomField>