force-app/main/default/objects/ACV_Form__c/fields/Low_Comp_2_Amount__c.field-meta.xml
<CustomField>
    <fullName>Low_Comp_2_Amount__c</fullName>
    <label>Low Comp 2 Amount</label>
    <precision>10</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>