force-app/main/default/objects/ACV_Form__c/fields/Low_Comp_3_Amount__c.field-meta.xml
<CustomField>
    <fullName>Low_Comp_3_Amount__c</fullName>
    <label>Low Comp 3 Amount</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>