force-app/main/default/objects/ACV_Form__c/fields/NADA_Trade_Value__c.field-meta.xml
<CustomField>
    <fullName>NADA_Trade_Value__c</fullName>
    <label>NADA Trade Value</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>