force-app/main/default/objects/ACV_Form__c/fields/Online_90_Day_Selling__c.field-meta.xml
<CustomField>
    <fullName>Online_90_Day_Selling__c</fullName>
    <label>Online 90 Day Selling %</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>