force-app/main/default/objects/ACV_Form__c/fields/Outdrive_Comments__c.field-meta.xml
<CustomField>
    <fullName>Outdrive_Comments__c</fullName>
    <label>Outdrive Comments</label>
    <type>TextArea</type>
</CustomField>