force-app/main/default/objects/ACV_Form__c/fields/Outdrive_Estimated_Repairs_Cost__c.field-meta.xml
<CustomField>
    <fullName>Outdrive_Estimated_Repairs_Cost__c</fullName>
    <label>Outdrive Estimated Repairs Cost</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>