force-app/main/default/objects/ACV_Form__c/fields/Owner_Trade__c.field-meta.xml
<CustomField>
    <fullName>Owner_Trade__c</fullName>
    <formula>Boat_Make__c</formula>
    <label>Owner Trade</label>
    <type>Text</type>
</CustomField>