force-app/main/default/objects/ACV_Form__c/fields/Recommended_90_Day_Online_Sell_price__c.field-meta.xml
<CustomField>
    <fullName>Recommended_90_Day_Online_Sell_price__c</fullName>
    <formula>(100- Online_90_Day_Selling__c )/01/100* Average_Online_Selling_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Recommended 90 Day Online Sell price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>