force-app/main/default/objects/ACV_Form__c/fields/Recommended_ACV__c.field-meta.xml
<CustomField>
    <fullName>Recommended_ACV__c</fullName>
    <formula>(100- Desire_Boat_Margin__c )/01/100* Boat_Value_Comp__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Recommended ACV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>