force-app/main/default/objects/ACV_Form__c/fields/Recommended_NADA_ACV__c.field-meta.xml
<CustomField>
    <fullName>Recommended_NADA_ACV__c</fullName>
    <formula>(100- Desire_Nada_Boat_Margin__c )/01/100* NADA_Trade_Value__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Recommended NADA ACV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>