force-app/main/default/objects/ACV_Form__c/fields/Requested_ACV__c.field-meta.xml
<CustomField>
    <fullName>Requested_ACV__c</fullName>
    <label>Requested ACV</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>