force-app/main/default/objects/ACV_Form__c/fields/Source_1__c.field-meta.xml
<CustomField>
    <fullName>Source_1__c</fullName>
    <label>Source 1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ACV_Source</valueSetName>
    </valueSet>
</CustomField>