force-app/main/default/objects/ACV_Form__c/fields/Speed_Control__c.field-meta.xml
<CustomField>
    <fullName>Speed_Control__c</fullName>
    <label>Speed Control</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ACV_Condition</valueSetName>
    </valueSet>
</CustomField>