force-app/main/default/objects/ACV_Form__c/fields/Speed_Control_Comments__c.field-meta.xml
<CustomField>
    <fullName>Speed_Control_Comments__c</fullName>
    <label>Speed Control Comments</label>
    <type>TextArea</type>
</CustomField>