force-app/main/default/objects/ACV_Form__c/fields/Stereo_Speakers__c.field-meta.xml
<CustomField>
    <fullName>Stereo_Speakers__c</fullName>
    <label>Stereo/Speakers</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ACV_Condition</valueSetName>
    </valueSet>
</CustomField>