force-app/main/default/objects/ACV_Form__c/fields/Stereo_Speakers_Comments__c.field-meta.xml
<CustomField>
    <fullName>Stereo_Speakers_Comments__c</fullName>
    <label>Stereo/Speakers Comments</label>
    <type>TextArea</type>
</CustomField>