force-app/main/default/objects/ACV_Form__c/fields/Swim_Platform__c.field-meta.xml
<CustomField>
    <fullName>Swim_Platform__c</fullName>
    <label>Swim Platform</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ACV_Condition</valueSetName>
    </valueSet>
</CustomField>