force-app/main/default/objects/ACV_Form__c/fields/Swim_Platform_Comments__c.field-meta.xml
<CustomField>
    <fullName>Swim_Platform_Comments__c</fullName>
    <label>Swim Platform Comments</label>
    <type>TextArea</type>
</CustomField>