force-app/main/default/objects/ACV_Form__c/fields/Trailer__c.field-meta.xml
<CustomField>
    <fullName>Trailer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Trailer</label>
    <type>Checkbox</type>
</CustomField>