force-app/main/default/objects/ACV_Form__c/fields/Trailer_Axles__c.field-meta.xml
<CustomField>
    <fullName>Trailer_Axles__c</fullName>
    <formula>Contact_Name__r.Account.Trade_Boat_Trailer_Axles__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Trailer Axles</label>
    <type>Text</type>
</CustomField>