force-app/main/default/objects/ACV_Form__c/fields/Trailer_Comments__c.field-meta.xml
<CustomField>
    <fullName>Trailer_Comments__c</fullName>
    <label>Trailer Comments</label>
    <type>TextArea</type>
</CustomField>