force-app/main/default/objects/ACV_Form__c/fields/Trailer_Make__c.field-meta.xml
<CustomField>
    <fullName>Trailer_Make__c</fullName>
    <formula>Contact_Name__r.Account.Trade_Boat_Trailer_Make__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Trailer Make</label>
    <type>Text</type>
</CustomField>