force-app/main/default/objects/ACV_Form__c/fields/Trailer_Model__c.field-meta.xml
<CustomField>
    <fullName>Trailer_Model__c</fullName>
    <formula>Contact_Name__r.Account.Trade_Boat_Trailer_Model__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Trailer Model</label>
    <type>Text</type>
</CustomField>