force-app/main/default/objects/ACV_Form__c/fields/Trailer_Vin__c.field-meta.xml
<CustomField>
    <fullName>Trailer_Vin__c</fullName>
    <formula>Contact_Name__r.Trade_Boat_Trailer_VIN__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Trailer Vin</label>
    <type>Text</type>
</CustomField>