force-app/main/default/objects/ACV_Form__c/fields/TrailerMake__c.field-meta.xml
<CustomField>
    <fullName>TrailerMake__c</fullName>
    <label>Trailer Make</label>
    <length>255</length>
    <type>Text</type>
</CustomField>