force-app/main/default/objects/ACV_Form__c/fields/TrailerModel__c.field-meta.xml
<CustomField>
    <fullName>TrailerModel__c</fullName>
    <label>Trailer Model</label>
    <length>255</length>
    <type>Text</type>
</CustomField>