force-app/main/default/objects/ACV_Form__c/fields/TrailerVin__c.field-meta.xml
<CustomField>
    <fullName>TrailerVin__c</fullName>
    <label>Trailer Vin</label>
    <length>255</length>
    <type>Text</type>
</CustomField>