force-app/main/default/objects/ACV_Form__c/fields/Upholstery__c.field-meta.xml
<CustomField>
    <fullName>Upholstery__c</fullName>
    <label>Upholstery/Carpet</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ACV_Condition</valueSetName>
    </valueSet>
</CustomField>