force-app/main/default/objects/ACV_Form__c/fields/Upholstery_Carpet_Comments__c.field-meta.xml
<CustomField>
    <fullName>Upholstery_Carpet_Comments__c</fullName>
    <label>Upholstery/Carpet Comments</label>
    <type>TextArea</type>
</CustomField>