force-app/main/default/objects/ACV_Form__c/fields/Upholstery_Carpet_Estimated_Repair_Cost__c.field-meta.xml
<CustomField>
    <fullName>Upholstery_Carpet_Estimated_Repair_Cost__c</fullName>
    <label>Upholstery/Carpet Estimated Repair Cost</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>